--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@
     </head>
 <body>
     <h1>Headline</h1>
+    <button type="text" id="button"></button>
+    <div id="textOutput"></div>
+    <script src="script.js"></script>
 </body>
 </html>
