--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
 <body>
     <h1>Headline</h1>
-    <button type="text" id="button"></button>
+    <button type="text" id="button">Button</button>
     <div id="textOutput"></div>
     <script src="script.js"></script>
 </body>
